--- a/index.html
+++ b/index.html
@@ -1279,7 +1279,7 @@ p.compat a {
 <p>
     <code>zepto.js</code>和<code>zepto.min.js</code>提供以上使用方式。
     然而，为了更好的程序效果和自由性，可以在使用Zepto源码构建Zepto.js和zepto.min.js的时候选择模块并作测试，
-    使用<a href="https://github.com/mishoo/UglifyJS">UglifyJS</a>根据你的需要来生成当服务端开启gzipped后，最精简的代码。
+    使用<a href="https://github.com/mishoo/UglifyJS">UglifyJS</a>根据你的需要来生成(当服务端开启gzipped后，最精简的代码)代码。
 </p>
 
 <p>
@@ -1735,7 +1735,7 @@ p.compat a {
       addClass(function(index, oldClassName){ ... }) ⇒ self
   </code></pre>
 
-    <p>为每个匹配的元素添加指定的class类名。多个class类名通过空格f分隔。</p>
+    <p>为每个匹配的元素添加指定的class类名。多个class类名通过空格分隔。</p>
 </article>
 
 <article class=method id="after">
@@ -1910,7 +1910,7 @@ p.compat a {
       closest(element) ⇒ collection [v1.0]
   </code></pre>
 
-    <p>从元素本身开始，逐级向上级元素匹配，并返回最先匹配selector的祖先元素。如果contextj节点参数存在。那么直考虑该节点的后代。这个方法与
+    <p>从元素本身开始，逐级向上级元素匹配，并返回最先匹配selector的祖先元素。如果context节点参数存在。那么直考虑该节点的后代。这个方法与
         <a href="#parents"><code>parents(selector)</code></a>有点相像，但他只返回最先匹配的祖先元素。</p>
 
     <p>&nbsp;</p>
