--- a/index.html
+++ b/index.html
@@ -1158,7 +1158,7 @@ p.compat a {
 <div class="container">
 
 <header>
-    <h1><img src="http://zeptojs.cn/skin/logo.png" alt="Zepto.js" class="logo"></h1>
+    <h1><img src="http://zeptojs.com/logo.png" alt="Zepto.js" class="logo"></h1>
 
     <p>
         <b>Zepto</b>是一个轻量级的<b>针对现代高级浏览器的JavaScript库，
