--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <title>Zepto.js: the aerogel-weight jQuery-compatible JavaScript library</title>
-  
+  <title>Zepto,Zepto API 中文版,Zepto 中文手册,Zepto API,Zepto API 中文版,Zepto 中文手册,Zepto API 1.1.4, Zepto API  1.1.4 中文版,Zepto 1.1.4 中文手册,Zepto 1.1.4 API-translate by yaotaiyang</title>
+<meta name="keywords" content="Zepto, Zepto API 中文版,Zepto 中文手册,Zepto API,Zepto API 中文版,Zepto 中文手册,Zepto API  1.1.4, Zepto API  1.1.4 中文版,Zepto 1.1.4 中文手册,Zepto 1.1.4 API">
+<meta name="description" content="Zepto, Zepto API 中文版,Zepto 中文手册,Zepto API,Zepto API 中文版,Zepto 中文手册,Zepto API  1.1.4, Zepto API  1.1.4 中文版,Zepto 1.1.4 中文手册,Zepto 1.1.4 API">
+<meta name="description" content="Zepto, Zepto API 中文版,Zepto 中文手册,Zepto API,Zepto API 中文版,Zepto 中文手册,Zepto API  1.1.4, Zepto API  1.1.4 中文版,Zepto 1.1.4 中文手册,Zepto 1.1.4 API">
+
   <meta name=description content="The aerogel-weight jQuery-compatible JavaScript library
 ">
   <meta name=apple-mobile-web-app-capable content=yes>
